// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar> Snapshots and structure should render story avatarWithActions 1`] = `
Array [
  <div
    className="lumx-avatar lumx-avatar--size-xl lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/256)",
      }
    }
  >
    <div
      className="lumx-avatar__actions"
    >
      <div
        style={
          Object {
            "display": "flex",
            "justifyContent": "center",
          }
        }
      >
        <div
          className="lumx-spacing-margin-right-regular"
        >
          <IconButton
            color="dark"
            emphasis="low"
            hasBackground={true}
            icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
            size="s"
          />
        </div>
        <div
          className="lumx-spacing-margin-right-regular"
        >
          <IconButton
            color="dark"
            emphasis="low"
            hasBackground={true}
            icon="M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17M12,4.5C7,4.5 2.73,7.61 1,12C2.73,16.39 7,19.5 12,19.5C17,19.5 21.27,16.39 23,12C21.27,7.61 17,4.5 12,4.5Z"
            size="s"
          />
        </div>
        <div>
          <IconButton
            color="dark"
            emphasis="low"
            hasBackground={true}
            icon="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
            size="s"
          />
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`<Avatar> Snapshots and structure should render story avatarWithBadge 1`] = `
Array [
  <div
    className="lumx-spacing-margin-bottom-regular lumx-avatar lumx-avatar--size-xs lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/40)",
      }
    }
  >
    <div
      className="lumx-avatar__badge"
    >
      <Badge
        color="blue"
      >
        <Icon
          icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        />
      </Badge>
    </div>
  </div>,
  <div
    className="lumx-spacing-margin-bottom-regular lumx-avatar lumx-avatar--size-s lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/48)",
      }
    }
  >
    <div
      className="lumx-avatar__badge"
    >
      <Badge
        color="blue"
      >
        <Icon
          icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        />
      </Badge>
    </div>
  </div>,
  <div
    className="lumx-spacing-margin-bottom-regular lumx-avatar lumx-avatar--size-m lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/72)",
      }
    }
  >
    <div
      className="lumx-avatar__badge"
    >
      <Badge
        color="blue"
      >
        <Icon
          icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        />
      </Badge>
    </div>
  </div>,
  <div
    className="lumx-spacing-margin-bottom-regular lumx-avatar lumx-avatar--size-l lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/128)",
      }
    }
  >
    <div
      className="lumx-avatar__badge"
    >
      <Badge
        color="blue"
      >
        <Icon
          icon="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
        />
      </Badge>
    </div>
  </div>,
]
`;

exports[`<Avatar> Snapshots and structure should render story l 1`] = `
Array [
  <div
    className="lumx-avatar lumx-avatar--size-l lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/128)",
      }
    }
  />,
]
`;

exports[`<Avatar> Snapshots and structure should render story m 1`] = `
Array [
  <div
    className="lumx-avatar lumx-avatar--size-m lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/72)",
      }
    }
  />,
]
`;

exports[`<Avatar> Snapshots and structure should render story s 1`] = `
Array [
  <div
    className="lumx-avatar lumx-avatar--size-s lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/48)",
      }
    }
  />,
]
`;

exports[`<Avatar> Snapshots and structure should render story xs 1`] = `
Array [
  <div
    className="lumx-avatar lumx-avatar--size-xs lumx-avatar--variant-rounded lumx-avatar--theme-light"
    style={
      Object {
        "backgroundImage": "url(http://i.pravatar.cc/40)",
      }
    }
  />,
]
`;
